# spotscrape

./: .cache  .env.example  .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  app.py  build_standalone.py  config.json.example  hook-spotscrape.py  pyproject.toml  requirements.txt  spotscrape-1.0.0-console.spec  spotscrape-1.0.0-windowed.spec  spotscrape.py  spotscrape.spec
frontend/static/css/: styles.css
frontend/static/js/: app.js
frontend/templates/: index.html
spotscrape.egg-info/: PKG-INFO  top_level.txt
src/spotscrape/: __init__.py  app.py  config.json.example  config_manager.py  content_processor.py  core.py  message_handler.py  setup_handler.py  spotify_manager.py  utils.py  web_extractor.py
src/spotscrape.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/spotscrape/JSON/: spotscrape_gpt.json
src/spotscrape/data/: musicdata_gpt.json  musicdata_url.json  spotscrape_gpt.json
src/spotscrape/frontend/static/css/: styles.css  tailwind.min.css
src/spotscrape/frontend/static/js/: app.js
src/spotscrape/frontend/templates/: index.html
tests/: __init__.py  test_core.py
web/: .cache  app.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: index.html
